<resources>
    <string name="app_name">鱼塘养殖系统</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="loginorregister">登录或注册账号</string>
    <string name="findpassword">找回密码</string>
    <string name="register">注册账号</string>
    <string name="login">登 录</string>
    <string name="status">实时数据</string>
    <string name="setting">管理设置</string>
    <string name="history">历史记录</string>
    <string name="mall">商城</string>
    <string name="monitor">视频监控</string>
    <string name="news">信息资讯</string>
    <string name="me">个人中心</string>
    <string name="show_status">实时数据显示</string>
    <string name="temperature">温度</string>
    <string name="selsius">°C</string>
    <string name="normal">正常</string>
    <string name="current_value">当前值</string>
    <string name="current_status">状态</string>
    <string name="turbidity">浊度</string>
    <string name="oxygen">含氧</string>
    <string name="ph">  PH</string>
    <string name="sensor_depth">深度</string>
    <string name="water_level">水位</string>
    <string name="oxygen_pump">氧气泵</string>
    <string name="lift_pump">抽水泵</string>
    <string name="waterflood_pump">注水泵</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
