<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/bg_gray">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/loginorregister"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_edit_text"
            android:padding="5dp"
            android:hint="@string/account"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_edit_text"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_find_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="50dp"
                android:text="@string/findpassword"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/rtv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="50dp"
                android:text="@string/register"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>