<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.ShowStatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/current_value"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingLeft="50dp"
            android:gravity="center"/>

        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/white"/>-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/current_status"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_temperature_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_tv_bg"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/selsius"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_temperature_state"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/shape_tv_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/turbidity"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_turbidity_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_tv_bg"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_turbidity_state"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/shape_tv_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/oxygen"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_oxygen_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_tv_bg"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="mg/L"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_oxygen_state"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/shape_tv_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/ph"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_ph_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_tv_bg"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ph_state"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/shape_tv_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/water_level"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_water_level_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_tv_bg"
                    android:text="0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="m"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_water_level_state"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/shape_tv_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <!--监控及位置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="定位信息"
                android:gravity="left"
                android:paddingLeft="37dp"
                android:paddingStart="37dp"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_location_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_tv_bg"
                android:text="0N 0E"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:paddingLeft="37dp"
                android:paddingStart="37dp"
                android:text="@string/sensor_depth"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_sensor_depth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_tv_bg"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="m"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="视频监控"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btn_connect_monitor"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="连接"
                android:textSize="18sp"
                android:background="@drawable/selector_btn_bg"
                android:textColor="@color/white"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp" />
        </LinearLayout>




    </LinearLayout>

</LinearLayout>